# bq2bq-dbt-docker

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
queries4test/: cana_tab_tbl_gen.sql  comptes_secours_tbl_gen.sql  dau_secours_tbl_gen.sql  recette_mensuelle_tbl_gen.sql  sad_chassis_tbl_gen.sql  sad_containers_line_tbl_gen.sql  sad_containers_tbl_gen.sql  sad_general_segment_tbl_gen.sql  sad_item_blk_tbl_gen.sql  sad_item_tbl_gen.sql  sad_relief_tbl_gen.sql  sad_supplementary_unit_tbl_gen.sql  sad_tax_tbl_gen.sql  sel_loc_param_tab_tbl_gen.sql  sel_nat_param_tab_tbl_gen.sql  sel_reg_param_tab_tbl_gen.sql  tarif_douanier_tab_tbl_gen.sql  unatdtab_tbl_gen.sql  uncartab_tbl_gen.sql  uncmptab_tbl_gen.sql  uncp4tab.sql  uncp4tab_tbl_gen.sql  unctntab_tbl_gen.sql  unctytab_tbl_gen.sql  unhs1tab_tbl_gen.sql  unhs2tab_tbl_gen.sql  unhs4tab_tbl_gen.sql  unhs5tab_tbl_gen.sql  unhs6tab_tbl_gen.sql  unindtab_tbl_gen.sql  unloctab_tbl_gen.sql  unmodtab_tbl_gen.sql  unpkgtab_tbl_gen.sql  unprftab_tbl_gen.sql  unrtxtab_tbl_gen.sql  unshdtab_tbl_gen.sql  untartab_tbl_gen.sql  untodtab_tbl_gen.sql  untoptab_tbl_gen.sql  untr1tab_tbl_gen.sql  (+2 more)
src/: dbt_project.yml  main.py  profiles.yml
src/models/: .gitkeep
